--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-theme: jekyll-theme-time-machine
+[![Header](https://raw.githubusercontent.com/MartinHeinz/<OWNER>/<OWNER>/readme_header.png "Header")](https://some-url.dev/)https://user-images.githubusercontent.com/101381589/157834733-4c2c59bf-1190-467a-a89f-3ca60044714c.png
